// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "apple-store",
      "name": "Apple Store",
      "products": [
        {
          "manufacturer": {
            "id": "apple",
          },
          "upc": "iphone",
        },
        {
          "manufacturer": {
            "id": "apple",
          },
          "upc": "ipad",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "apple-store",
            "name": "Apple Store",
            "products": [
              {
                "upc": "iphone",
              },
              {
                "upc": "ipad",
              },
            ],
          },
        },
        "field": {
          "inlineVariables": {
            "id": "apple-store",
          },
          "kind": "composite",
          "name": "storefront",
          "ofType": "Storefront",
          "parentType": "Query",
          "path": "storefront",
          "type": "Storefront",
        },
        "includes": [
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                },
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "composite",
              "name": "manufacturer",
              "ofType": "Manufacturer",
              "parentType": "Product",
              "path": "storefront.products.manufacturer",
              "type": "Manufacturer",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  manufacturer {
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "manufacturer.id",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "iphone",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                },
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "composite",
              "name": "manufacturer",
              "ofType": "Manufacturer",
              "parentType": "Product",
              "path": "storefront.products.manufacturer",
              "type": "Manufacturer",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  manufacturer {
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "manufacturer.id",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "ipad",
            },
          },
        ],
        "kind": "composite",
        "ofType": "Storefront",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  products {
    upc
  }
  name
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "products.upc",
          "name",
        ],
        "subgraph": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "apple-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "BasicWithFragmentDefinition",
      "resolvers": {
        "storefront": {
          "field": {
            "inlineVariables": {
              "id": "apple-store",
            },
            "kind": "composite",
            "name": "storefront",
            "ofType": "Storefront",
            "parentType": "Query",
            "path": "storefront",
            "type": "Storefront",
          },
          "includes": {
            "products": {
              "field": {
                "inlineVariables": {},
                "kind": "composite",
                "name": "manufacturer",
                "ofType": "Manufacturer",
                "parentType": "Product",
                "path": "storefront.products.manufacturer",
                "type": "Manufacturer",
              },
              "includes": {},
              "kind": "composite",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  manufacturer {
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [],
              "public": [
                "manufacturer.id",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "composite",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  products {
    upc
  }
  name
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "products.upc",
            "name",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query BasicWithFragmentDefinition {
  storefront(id: "apple-store") {
    id
    products {
      ...P
    }
    name
  }
}

fragment P on Product {
  upc
  manufacturer {
    id
  }
}",
}
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "samsung-store",
      "name": "Samsung",
      "products": [
        {
          "name": "Samsung TV",
          "upc": "tv",
        },
        {
          "name": "Samsung Fold",
          "upc": "fold",
        },
        {
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "samsung-store",
            "name": "Samsung",
            "products": [
              {
                "upc": "tv",
              },
              {
                "upc": "fold",
              },
              {
                "upc": "galaxy",
              },
            ],
          },
        },
        "field": {
          "inlineVariables": {
            "id": "samsung-store",
          },
          "kind": "composite",
          "name": "storefront",
          "ofType": "Storefront",
          "parentType": "Query",
          "path": "storefront",
          "type": "Storefront",
        },
        "includes": [
          {
            "data": {
              "product": {
                "name": "Samsung TV",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "tv",
            },
          },
          {
            "data": {
              "product": {
                "name": "Samsung Fold",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "fold",
            },
          },
          {
            "data": {
              "product": {
                "name": "Samsung Galaxy",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
            "pathInData": [
              "storefront",
              "products",
              2,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "galaxy",
            },
          },
        ],
        "kind": "composite",
        "ofType": "Storefront",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "name",
          "products.upc",
        ],
        "subgraph": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "samsung-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithInlineVariables",
      "resolvers": {
        "storefront": {
          "field": {
            "inlineVariables": {
              "id": "samsung-store",
            },
            "kind": "composite",
            "name": "storefront",
            "ofType": "Storefront",
            "parentType": "Query",
            "path": "storefront",
            "type": "Storefront",
          },
          "includes": {
            "products": {
              "field": {
                "inlineVariables": {},
                "kind": "scalar",
                "name": "name",
                "ofType": "String",
                "parentType": "Product",
                "path": "storefront.products.name",
                "type": "String!",
              },
              "includes": {},
              "kind": "composite",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
              "pathToExportData": [
                "product",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "composite",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      ... on Product {
        upc
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should execute 1`] = `
{
  "data": {
    "productsByUpcs": [
      {
        "manufacturer": {
          "name": "Samsung",
          "products": [
            {
              "name": "Samsung TV",
              "upc": "tv",
            },
            {
              "name": "Samsung Fold",
              "upc": "fold",
            },
            {
              "name": "Samsung Galaxy",
              "upc": "galaxy",
            },
          ],
        },
        "name": "Samsung Galaxy",
        "upc": "galaxy",
      },
      {
        "manufacturer": {
          "name": "Apple",
          "products": [
            {
              "name": "Apple iPhone",
              "upc": "iphone",
            },
            {
              "name": "iPad",
              "upc": "ipad",
            },
          ],
        },
        "name": "Apple iPhone",
        "upc": "iphone",
      },
    ],
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "productsByUpcs": [
            {
              "manufacturer": {
                "id": "samsung",
                "products": [
                  {
                    "name": "Samsung TV",
                    "upc": "tv",
                  },
                  {
                    "name": "Samsung Fold",
                    "upc": "fold",
                  },
                  {
                    "name": "Samsung Galaxy",
                    "upc": "galaxy",
                  },
                ],
              },
              "name": "Samsung Galaxy",
              "upc": "galaxy",
            },
            {
              "manufacturer": {
                "id": "apple",
                "products": [
                  {
                    "name": "Apple iPhone",
                    "upc": "iphone",
                  },
                  {
                    "name": "iPad",
                    "upc": "ipad",
                  },
                ],
              },
              "name": "Apple iPhone",
              "upc": "iphone",
            },
          ],
        },
        "field": {
          "inlineVariables": {
            "upcs": [
              "galaxy",
              "iphone",
            ],
          },
          "kind": "composite",
          "name": "productsByUpcs",
          "ofType": "Product",
          "parentType": "Query",
          "path": "productsByUpcs",
          "type": "[Product]!",
        },
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Manufacturer",
              "path": "productsByUpcs.manufacturer.name",
              "type": "String!",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
            "pathInData": [
              "productsByUpcs",
              0,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
          {
            "data": {
              "manufacturer": {
                "name": "Apple",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Manufacturer",
              "path": "productsByUpcs.manufacturer.name",
              "type": "String!",
            },
            "includes": [],
            "kind": "composite",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
            "pathInData": [
              "productsByUpcs",
              1,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "apple",
            },
          },
        ],
        "kind": "composite",
        "ofType": "Product",
        "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    ...__export
  }
}

fragment __export on Product {
  upc
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
        "pathInData": [
          "productsByUpcs",
        ],
        "pathToExportData": [
          "productsByUpcs",
        ],
        "private": [
          "manufacturer.id",
        ],
        "public": [
          "upc",
          "name",
          "manufacturer.products.upc",
          "manufacturer.products.name",
        ],
        "subgraph": "products",
        "type": "[Product]!",
        "variables": {
          "upcs": [
            "galaxy",
            "iphone",
          ],
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ListOperationResolver",
      "resolvers": {
        "productsByUpcs": {
          "field": {
            "inlineVariables": {
              "upcs": [
                "galaxy",
                "iphone",
              ],
            },
            "kind": "composite",
            "name": "productsByUpcs",
            "ofType": "Product",
            "parentType": "Query",
            "path": "productsByUpcs",
            "type": "[Product]!",
          },
          "includes": {
            "manufacturer": {
              "field": {
                "inlineVariables": {},
                "kind": "scalar",
                "name": "name",
                "ofType": "String",
                "parentType": "Manufacturer",
                "path": "productsByUpcs.manufacturer.name",
                "type": "String!",
              },
              "includes": {},
              "kind": "composite",
              "ofType": "Manufacturer",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "subgraph": "manufacturers",
              "type": "Manufacturer",
              "variables": {
                "Manufacturer_id": {
                  "kind": "select",
                  "name": "Manufacturer_id",
                  "select": "id",
                },
              },
            },
          },
          "kind": "composite",
          "ofType": "Product",
          "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    ...__export
  }
}

fragment __export on Product {
  upc
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathToExportData": [
            "productsByUpcs",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "upc",
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "subgraph": "products",
          "type": "[Product]!",
          "variables": {
            "upcs": {
              "kind": "user",
              "name": "upcs",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ListOperationResolver {
  productsByUpcs(upcs: ["galaxy", "iphone"]) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      name
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "samsung-store",
      "name": "Samsung",
      "products": [
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung TV",
          "upc": "tv",
        },
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Fold",
          "upc": "fold",
        },
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "samsung-store",
            "name": "Samsung",
            "products": [
              {
                "upc": "tv",
              },
              {
                "upc": "fold",
              },
              {
                "upc": "galaxy",
              },
            ],
          },
        },
        "field": {
          "inlineVariables": {
            "id": "samsung-store",
          },
          "kind": "composite",
          "name": "storefront",
          "ofType": "Storefront",
          "parentType": "Query",
          "path": "storefront",
          "type": "Storefront",
        },
        "includes": [
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "samsung",
                  "products": [
                    {
                      "name": "Samsung TV",
                      "upc": "tv",
                    },
                    {
                      "name": "Samsung Fold",
                      "upc": "fold",
                    },
                    {
                      "name": "Samsung Galaxy",
                      "upc": "galaxy",
                    },
                  ],
                },
                "name": "Samsung TV",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Samsung",
                  },
                },
                "field": {
                  "inlineVariables": {},
                  "kind": "scalar",
                  "name": "name",
                  "ofType": "String",
                  "parentType": "Manufacturer",
                  "path": "storefront.products.manufacturer.name",
                  "type": "String!",
                },
                "includes": [],
                "kind": "composite",
                "ofType": "Manufacturer",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  0,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "subgraph": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "samsung",
                },
              },
            ],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "tv",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "samsung",
                  "products": [
                    {
                      "name": "Samsung TV",
                      "upc": "tv",
                    },
                    {
                      "name": "Samsung Fold",
                      "upc": "fold",
                    },
                    {
                      "name": "Samsung Galaxy",
                      "upc": "galaxy",
                    },
                  ],
                },
                "name": "Samsung Fold",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Samsung",
                  },
                },
                "field": {
                  "inlineVariables": {},
                  "kind": "scalar",
                  "name": "name",
                  "ofType": "String",
                  "parentType": "Manufacturer",
                  "path": "storefront.products.manufacturer.name",
                  "type": "String!",
                },
                "includes": [],
                "kind": "composite",
                "ofType": "Manufacturer",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  1,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "subgraph": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "samsung",
                },
              },
            ],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "fold",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "samsung",
                  "products": [
                    {
                      "name": "Samsung TV",
                      "upc": "tv",
                    },
                    {
                      "name": "Samsung Fold",
                      "upc": "fold",
                    },
                    {
                      "name": "Samsung Galaxy",
                      "upc": "galaxy",
                    },
                  ],
                },
                "name": "Samsung Galaxy",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Samsung",
                  },
                },
                "field": {
                  "inlineVariables": {},
                  "kind": "scalar",
                  "name": "name",
                  "ofType": "String",
                  "parentType": "Manufacturer",
                  "path": "storefront.products.manufacturer.name",
                  "type": "String!",
                },
                "includes": [],
                "kind": "composite",
                "ofType": "Manufacturer",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  2,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "subgraph": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "samsung",
                },
              },
            ],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              2,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "galaxy",
            },
          },
        ],
        "kind": "composite",
        "ofType": "Storefront",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "name",
          "products.upc",
        ],
        "subgraph": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "samsung-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithInlineVariables",
      "resolvers": {
        "storefront": {
          "field": {
            "inlineVariables": {
              "id": "samsung-store",
            },
            "kind": "composite",
            "name": "storefront",
            "ofType": "Storefront",
            "parentType": "Query",
            "path": "storefront",
            "type": "Storefront",
          },
          "includes": {
            "products": {
              "field": {
                "inlineVariables": {},
                "kind": "scalar",
                "name": "name",
                "ofType": "String",
                "parentType": "Product",
                "path": "storefront.products.name",
                "type": "String!",
              },
              "includes": {
                "manufacturer": {
                  "field": {
                    "inlineVariables": {},
                    "kind": "scalar",
                    "name": "name",
                    "ofType": "String",
                    "parentType": "Manufacturer",
                    "path": "storefront.products.manufacturer.name",
                    "type": "String!",
                  },
                  "includes": {},
                  "kind": "composite",
                  "ofType": "Manufacturer",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "subgraph": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "kind": "select",
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "kind": "composite",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "composite",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "apple-store",
      "name": "Apple Store",
      "products": [
        {
          "manufacturer": {
            "name": "Apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "Apple iPhone",
          "upc": "iphone",
        },
        {
          "manufacturer": {
            "name": "Apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "iPad",
          "upc": "ipad",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "apple-store",
            "name": "Apple Store",
            "products": [
              {
                "upc": "iphone",
              },
              {
                "upc": "ipad",
              },
            ],
          },
        },
        "field": {
          "inlineVariables": {},
          "kind": "composite",
          "name": "storefront",
          "ofType": "Storefront",
          "parentType": "Query",
          "path": "storefront",
          "type": "Storefront",
        },
        "includes": [
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                  "products": [
                    {
                      "name": "Apple iPhone",
                      "upc": "iphone",
                    },
                    {
                      "name": "iPad",
                      "upc": "ipad",
                    },
                  ],
                },
                "name": "Apple iPhone",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Apple",
                  },
                },
                "field": {
                  "inlineVariables": {},
                  "kind": "scalar",
                  "name": "name",
                  "ofType": "String",
                  "parentType": "Manufacturer",
                  "path": "storefront.products.manufacturer.name",
                  "type": "String!",
                },
                "includes": [],
                "kind": "composite",
                "ofType": "Manufacturer",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  0,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "subgraph": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "apple",
                },
              },
            ],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "iphone",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                  "products": [
                    {
                      "name": "Apple iPhone",
                      "upc": "iphone",
                    },
                    {
                      "name": "iPad",
                      "upc": "ipad",
                    },
                  ],
                },
                "name": "iPad",
              },
            },
            "field": {
              "inlineVariables": {},
              "kind": "scalar",
              "name": "name",
              "ofType": "String",
              "parentType": "Product",
              "path": "storefront.products.name",
              "type": "String!",
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Apple",
                  },
                },
                "field": {
                  "inlineVariables": {},
                  "kind": "scalar",
                  "name": "name",
                  "ofType": "String",
                  "parentType": "Manufacturer",
                  "path": "storefront.products.manufacturer.name",
                  "type": "String!",
                },
                "includes": [],
                "kind": "composite",
                "ofType": "Manufacturer",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  1,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "subgraph": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "apple",
                },
              },
            ],
            "kind": "composite",
            "ofType": "Product",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "subgraph": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "ipad",
            },
          },
        ],
        "kind": "composite",
        "ofType": "Storefront",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "name",
          "products.upc",
        ],
        "subgraph": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "apple-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithOperationVariables",
      "resolvers": {
        "storefront": {
          "field": {
            "inlineVariables": {},
            "kind": "composite",
            "name": "storefront",
            "ofType": "Storefront",
            "parentType": "Query",
            "path": "storefront",
            "type": "Storefront",
          },
          "includes": {
            "products": {
              "field": {
                "inlineVariables": {},
                "kind": "scalar",
                "name": "name",
                "ofType": "String",
                "parentType": "Product",
                "path": "storefront.products.name",
                "type": "String!",
              },
              "includes": {
                "manufacturer": {
                  "field": {
                    "inlineVariables": {},
                    "kind": "scalar",
                    "name": "name",
                    "ofType": "String",
                    "parentType": "Manufacturer",
                    "path": "storefront.products.manufacturer.name",
                    "type": "String!",
                  },
                  "includes": {},
                  "kind": "composite",
                  "ofType": "Manufacturer",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "subgraph": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "kind": "select",
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "kind": "composite",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "composite",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithOperationVariables($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarListInOperation' > should execute 1`] = `
{
  "data": {
    "productNames": [
      "Samsung TV",
      "Samsung Fold",
      "Samsung Galaxy",
      "Apple iPhone",
      "iPad",
    ],
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "productNames": [
            "Samsung TV",
            "Samsung Fold",
            "Samsung Galaxy",
            "Apple iPhone",
            "iPad",
          ],
        },
        "field": {
          "inlineVariables": {},
          "kind": "scalar",
          "name": "productNames",
          "ofType": "String",
          "parentType": "Query",
          "path": "productNames",
          "type": "[String!]!",
        },
        "kind": "scalar",
        "ofType": "String",
        "operation": "query productNames {
  productNames
}",
        "pathInData": [
          "productNames",
        ],
        "pathToExportData": [
          "productNames",
        ],
        "subgraph": "products",
        "type": "[String!]!",
        "variables": {},
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ScalarListInOperation' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarListInOperation",
      "resolvers": {
        "productNames": {
          "field": {
            "inlineVariables": {},
            "kind": "scalar",
            "name": "productNames",
            "ofType": "String",
            "parentType": "Query",
            "path": "productNames",
            "type": "[String!]!",
          },
          "kind": "scalar",
          "ofType": "String",
          "operation": "query productNames {
  productNames
}",
          "pathToExportData": [
            "productNames",
          ],
          "subgraph": "products",
          "type": "[String!]!",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarListInOperation {
  productNames
}",
}
`;

exports[`fixture 'store' > query 'ScalarListInType' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "productNames": [
        "Apple iPhone",
        "iPad",
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "productNames": [
              "Apple iPhone",
              "iPad",
            ],
          },
        },
        "field": {
          "inlineVariables": {
            "id": "apple-store",
          },
          "kind": "composite",
          "name": "storefront",
          "ofType": "Storefront",
          "parentType": "Query",
          "path": "storefront",
          "type": "Storefront",
        },
        "includes": [],
        "kind": "composite",
        "ofType": "Storefront",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  productNames
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "productNames",
        ],
        "subgraph": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "apple-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ScalarListInType' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarListInType",
      "resolvers": {
        "storefront": {
          "field": {
            "inlineVariables": {
              "id": "apple-store",
            },
            "kind": "composite",
            "name": "storefront",
            "ofType": "Storefront",
            "parentType": "Query",
            "path": "storefront",
            "type": "Storefront",
          },
          "includes": {},
          "kind": "composite",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  productNames
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "productNames",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarListInType {
  storefront(id: "apple-store") {
    productNames
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should execute 1`] = `
{
  "data": {
    "manufacturerName": "Samsung",
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "manufacturerName": "Samsung",
        },
        "field": {
          "inlineVariables": {
            "id": "samsung",
          },
          "kind": "scalar",
          "name": "manufacturerName",
          "ofType": "String",
          "parentType": "Query",
          "path": "manufacturerName",
          "type": "String",
        },
        "kind": "scalar",
        "ofType": "String",
        "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
        "pathInData": [
          "manufacturerName",
        ],
        "pathToExportData": [
          "manufacturerName",
        ],
        "subgraph": "manufacturers",
        "type": "String",
        "variables": {
          "id": "samsung",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationField",
      "resolvers": {
        "manufacturerName": {
          "field": {
            "inlineVariables": {
              "id": "samsung",
            },
            "kind": "scalar",
            "name": "manufacturerName",
            "ofType": "String",
            "parentType": "Query",
            "path": "manufacturerName",
            "type": "String",
          },
          "kind": "scalar",
          "ofType": "String",
          "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
          "pathToExportData": [
            "manufacturerName",
          ],
          "subgraph": "manufacturers",
          "type": "String",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationField {
  manufacturerName(id: "samsung")
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should execute 1`] = `
{
  "data": {
    "productName": "iPad",
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "product": {
            "name": "iPad",
          },
        },
        "field": {
          "inlineVariables": {
            "upc": "ipad",
          },
          "kind": "scalar",
          "name": "productName",
          "ofType": "String",
          "parentType": "Query",
          "path": "productName",
          "type": "String",
        },
        "kind": "scalar",
        "ofType": "String",
        "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
        "pathInData": [
          "productName",
        ],
        "pathToExportData": [
          "product",
          "name",
        ],
        "subgraph": "products",
        "type": "String",
        "variables": {
          "upc": "ipad",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationFieldNested",
      "resolvers": {
        "productName": {
          "field": {
            "inlineVariables": {
              "upc": "ipad",
            },
            "kind": "scalar",
            "name": "productName",
            "ofType": "String",
            "parentType": "Query",
            "path": "productName",
            "type": "String",
          },
          "kind": "scalar",
          "ofType": "String",
          "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
          "pathToExportData": [
            "product",
            "name",
          ],
          "subgraph": "products",
          "type": "String",
          "variables": {
            "upc": {
              "kind": "user",
              "name": "upc",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationFieldNested {
  productName(upc: "ipad")
}",
}
`;

exports[`should build proper operation and find export path for 'FindDeepestPath' resolver 1`] = `
{
  "operation": "query FindDeepestPath {
  manufacturer {
    nested {
      deep
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  id
  name
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        ...__export
      }
    }
  }
}

fragment __export on Manufacturer {
  id
  name
  products {
    manufacturer {
      location
    }
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
